--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx watch src/server.ts",
+    "start": "ts-node-dev src/server.ts | pino-pretty -c",
+    "start:tsx": "tsx watch src/server.ts | pino-pretty -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,14 +22,20 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
+    "prisma": "^4.12.0",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "pino": "^8.11.0",
+    "pino-pretty": "^10.0.0",
     "socket.io": "^4.6.1"
   }
 }
